fix: fixing pagination background color on mobile
Posts view on mobile showed incorrect (white) background color

--- a/modules/ept-frontend/client/scss/ept/views/public/_posts.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_posts.scss
@@ -563,7 +563,7 @@ ad-viewer {
         // bottom: 3rem;
         // left: 0;
         // right: 0;
-        background-color: #fff;
+        // background-color: #fff;
         // border-top: 1px solid $border-color;
         // text-align: center;
       }
